# rust-rss-reader

./: Cargo.toml  Dockerfile  README.md  feeds.txt  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: Cargo.toml  keywords.txt
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/src/components/: HelloWorld.vue
src/: main.rs
