[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0.6"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }